syntax = "proto3";

package greet;

option go_package = "grpc-greeter/pkg/proto/generated;generated";


message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply);
}